[gd_scene load_steps=7 format=3 uid="uid://k688shjetnt"]

[ext_resource type="Script" uid="uid://bltq56lharn3k" path="res://scripts/ui/finished_level_ui.gd" id="1_pqqqr"]
[ext_resource type="Theme" uid="uid://da1ms4edocy34" path="res://scenes/ui/ui_hint_theme.tres" id="2_u7ot7"]
[ext_resource type="Texture2D" uid="uid://c45quxy6w8g3m" path="res://assets/external/coin.png" id="3_lt1i3"]
[ext_resource type="FontFile" uid="uid://3ea2t807hguu" path="res://assets/external/fonts/m5x7.ttf" id="4_v6sr8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajekx"]
bg_color = Color(0, 0, 0, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxxkw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="LevelUI" type="CanvasLayer"]
script = ExtResource("1_pqqqr")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_u7ot7")
theme_override_styles/panel = SubResource("StyleBoxFlat_ajekx")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Panel4" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_styles/panel = SubResource("StyleBoxFlat_cxxkw")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Well Done"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_styles/panel = SubResource("StyleBoxFlat_cxxkw")

[node name="RatingDisplay" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/RatingDisplay"]
layout_mode = 2
texture = ExtResource("3_lt1i3")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/RatingDisplay"]
layout_mode = 2
texture = ExtResource("3_lt1i3")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer/RatingDisplay"]
layout_mode = 2
texture = ExtResource("3_lt1i3")
stretch_mode = 5

[node name="Panel2" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.65
theme_override_styles/panel = SubResource("StyleBoxFlat_cxxkw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NextLevel" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.86783844, 0.3730341, 1)
theme_override_fonts/font = ExtResource("4_v6sr8")
text = "Next Level"

[node name="PlayAgain" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.86783844, 0.3730341, 1)
theme_override_fonts/font = ExtResource("4_v6sr8")
text = "Play Again"

[node name="LevelSelect" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.86783844, 0.3730341, 1)
theme_override_fonts/font = ExtResource("4_v6sr8")
text = "Level Select"

[node name="Panel3" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cxxkw")
